BUGFIX: fixed minimal gap for growing comb

--- a/Packages/Sites/Konglomerat.Website/Resources/Private/Scss/Molecules/_GrowingComb.scss
+++ b/Packages/Sites/Konglomerat.Website/Resources/Private/Scss/Molecules/_GrowingComb.scss
@@ -14,6 +14,8 @@
 
 .growing-comb__middle {
 	width: 100%;
+	margin-top: -2px;
+	margin-bottom: -2px;
 	background: white;
 	z-index: 1;
 }
